DRY up onboarding carousel + small fixes
- DRY calls to rendering the onboarding card
- Reduce number of HTML elements
- Fix loading flash where cards initially appear squished before JS pops
  in
- Name more consistently with our standards
- Prefer px for width/height

--- a/static/css/components/home.less
+++ b/static/css/components/home.less
@@ -1,40 +1,47 @@
 /* Homepage about section */
 @import (less) "less/font-families.less";
 
-div.tutorial__item {
+.onboarding-card {
   background-color: @book-cover-carousel-cards;
   border: 1px solid hsl(0, 0%, 87%);
   border-radius: 5px;
-  padding: 10px;
-  min-width: 220px;
+  padding: 15px;
+  // top-bottom margin is to leave space for the outline on focus
+  margin: 2px 10px;
+  display: flex;
+  align-items: center;
 
-  @media only screen and (min-width: @width-breakpoint-desktop) {
-    min-width: 310px;
+  // Override slick styles which use display block/none
+  &.slick-active {
+    display: flex !important;
   }
+
+  // Before slick loads, force the width to be larger otherwise
+  // the cards get clipped.
+  &:not(.slick-slide) {
+    width: 310px;
+    flex-shrink: 0;
+    max-width: 100%;
+  }
+
   &:focus {
-    border: 1px solid hsl(202, 97%, 28%);
+    // Also override that weird orange border from somewhere else
+    outline: 1px solid hsl(202, 97%, 28%);
   }
   p {
-    margin: .4% 4%;
-    font-size: 1rem;
-    font-weight: 500;
+    margin: 1px 0;
+    font-size: @font-size-body-medium;
     line-height: normal;
   }
   p.small {
     color: @gray-a19b9e;
-    font-size: .8rem;
-  }
-  a {
-    display: flex;
-    align-items: center;
-    height: 100px;
+    font-size: .8em;
   }
   img {
-    position: relative;
-    margin: 5px;
     float: left;
-    height: 5rem;
+    width: 80px;
     opacity: 80%;
+    margin-right: 10px;
   }
 }
 
@@ -115,9 +122,6 @@ div.chartHome a:hover,
 }
 /* stylelint-enable selector-max-specificity */
 
-.card__text {
-  margin: 5px;
-}
 .home-resource-section {
   flex: 1;
   font-size: 13px;
